:sparkles: Added patients list menu option